--- a/pytest.ini
+++ b/pytest.ini
@@ -4,4 +4,4 @@ markers =
     debug: debug
     case: case
 
-#addopts = -m case  -s --pytest-tmreport-name=./report/report.html
+addopts = -m case  -s --pytest-tmreport-name=./report/report.html
