--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,10 @@
+
 [pytest]
 
 markers =
     debug: debug
-    case: case
+    admin: admin
+    dev: developer
+    visitor: visitor
 
-addopts = -m case  -s --pytest-tmreport-name=./report/report.html
+addopts = -m admin -s --pytest-tmreport-name=./report/report.html
