--- a/pytest.ini
+++ b/pytest.ini
@@ -2,9 +2,8 @@
 [pytest]
 
 markers =
-    debug: debug
-    admin: admin
-    dev: developer
-    visitor: visitor
+    debug: debug case
+    syy: syy case
+    run
 
-addopts = -m admin -s --pytest-tmreport-name=./report/report.html
+addopts =  -s --pytest-tmreport-name=./report/report.html
